--- a/realisation/client/index.html
+++ b/realisation/client/index.html
@@ -7,8 +7,8 @@
 <body>
 	<div id="gyro"></div>
 </body>
-	<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+	<script src="/libs/socket.js"></script>
 	<script type="text/javascript">
-		var socket = io();
+		var socket = io.connect('http://localhost:8080');
 	</script>
 </html>
