--- a/realisation/client/index.html
+++ b/realisation/client/index.html
@@ -12,5 +12,5 @@
 </body>
 	<script src="./libs/gyro.js"></script>
 	<script src="./libs/socket.io.js"></script>
-	<script type="./js/script.js"></script>
+	<script src="./js/script.js"></script>
 </html>
