--- a/realisation/client/index.html
+++ b/realisation/client/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Bonjour</title>
-	<meta charset="utf-8" />
-</head>
-<body>
-	<div id="gyro"></div>
-	<div id="visu" style="height:250px; width:40%; background-color:blue; margin: auto;"></div>
-	<input type="text" id="ip"></input>
-	<button onclick="connect()">GO</button>
-</body>
-	<script src="./libs/gyro.js"></script>
-	<script src="./libs/socket.io.js"></script>
-	<script src="./js/script.js"></script>
+	<html>
+	<head>
+		<title></title>
+		<meta charset="utf-8" />
+	</head>
+	<body>
+		<div id="gyro"></div>
+		<div id="visu" style="height:250px; width:40%; background-color:blue; margin: auto;"></div>
+	</body>
+	<script type="text/javascript" src="libs/socket.io.js"></script>
+	<script type="text/javascript" src="libs/gyro.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </html>
