--- a/realisation/client/web/index.html
+++ b/realisation/client/web/index.html
@@ -7,6 +7,7 @@
 	<body>
 		<div id="gyro"></div>
 		<div id="visu" style="height:250px; width:40%; background-color:blue; margin: auto;"></div>
+		<button type="button" onclick="socket.emit('fire', 1)">Click Me!</button> 
 	</body>
 	<script type="text/javascript" src="libs/socket.io.js"></script>
 	<script type="text/javascript" src="libs/gyro.js"></script>
