--- a/realisation/client/web/index.html
+++ b/realisation/client/web/index.html
@@ -8,13 +8,14 @@
 	<body>
 		<section id="dispo">
 			<header>
-				<h1 class="head">Choisisez votre robot !</h1>
+				<h1 class="head">Choisissez votre robot !</h1>
 				<form  class="head">
 					<span> Nom de joueur : </span>
 					<input id="username"></input>
 				</form>
 			</header>
 			<div id="robot">
+			<span> Robots disponibles :</span>
 			</div>
 		</section>
 
