ajout de features

--- a/realisation/client/web/index.html
+++ b/realisation/client/web/index.html
@@ -20,7 +20,7 @@
 		</section>
 
 		<section id="gyro">
-		<div id="visu" style="height:250px; width:40%; background-color:blue; margin: auto;"></div>
+		<div id="visu" style="height:500px; width:40%; background-color:blue; margin: 50% auto;"></div>
 		</section>
 
 	</body>
