Modifications sur index

--- a/realisation/client/web/index.html
+++ b/realisation/client/web/index.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 		<section id="dispo">
+			<h1 class="head">Choisissez votre robot</h1>
 			<header>
-				<h1 class="head">Choisissez votre robot !</h1>
 				<form  class="head">
 					<span> Nom de joueur : </span>
 					<input id="username"></input>
